# psn-job-application-tracker

./: .editorconfig  .gitattributes  .gitignore  README.md  kind-config.yml  package.json  turbo.json
.github/workflows/: check_deploy.yml
apps/client/: .dockerignore  Dockerfile  kind-deploy.yml  kind-service.yml  next.config.ts  package.json  playwright.config.ts  svgr.config.fill.cjs  svgr.config.stroke.cjs  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
apps/client/src/app/: error.tsx  layout.tsx  loading.tsx  page.tsx  (+1 more)
apps/server/: .dockerignore  Dockerfile  fly.toml  kind-deploy.yml  kind-service.yml  mdw_order.md  package.json  settings.gradle.kts
apps/server/app/: build.gradle.bkp  build.gradle.kts
apps/server/cheatsheets/: fn.md  pub_1.md  publishers.md  sql.md  write_files.md
apps/server/gradle/: libs.versions.toml  libs.versions.toml.bkp
apps/server/java_pkg_cli/: .flake8  pyproject.toml
apps/server/java_pkg_cli/src/java_pkg_cli/: __main__.py
apps/server/java_pkg_cli/src/java_pkg_cli/lib/: etc.py  reg.py  rules.py
apps/server/java_pkg_cli/src/java_pkg_cli/lib/gradle_pkg/: conf_gradle.py  mng_gradle.py
apps/server/java_pkg_cli/src/java_pkg_cli/lib/toml_catalog/: ctx_catalog.py  mng_catalog.py
apps/server/sql_cheat_sheets/: ddl.sql
matveevalexander470@gmail.com/: backup_codes.txt  totp_secret.txt
nginx/: dev.conf  kind.conf  nginx.conf
postman/: ENV_VAR.postman_environment.json  TEST_API.postman_collection.json
postman/scripts/: get_tokens.js  refresh_token.js
scripts/: docker.zsh  files.zsh  java.zsh  kind.zsh  nginx.zsh
(+749 files in other folders)
