[project]
name = "java-pkg-cli"
version = "1.0.0"
description = ""
authors = [
    {name = "AlexanderMatveev2908",email = "matveevalexander470@gmail.com"}
]
# readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "tomlkit (>=0.13.3,<0.14.0)"
]

packages = [
    { include = "java_pkg_cli", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"


